--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,17 +18,20 @@
   },
   "homepage": "https://github.com/rodrigomafrarios/clean-node#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "eslint": "^7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   }
 }
