--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-	"test:verbose": "jest --passWithNoTests",
-	"test:unit": "npm test -- --watch -c jest-unit-config.js",
-	"test:integration": "npm test -- --watch -c jest-integration-config.js",
-	"test:staged": "npm test -- --findRelatedTests",
-	"test:ci": "npm test -- --coverage"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
+    "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "eslint": "^7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -38,5 +39,8 @@
     "lint-staged": "^10.5.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "validator": "^13.5.1"
   }
 }
