--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rodrigomafrarios/clean-node#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/validator": "^13.1.1",
@@ -41,6 +42,8 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "node-pre-gyp": "^0.17.0",
     "validator": "^13.5.1"
   }
 }
