--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "build": "sucrase ./src -d ./dist --transforms typescript,imports && tsc -p tsconfig-build.json",
-    "start": "node ./dist/server.js",
+    "start": "sucrase-node src/main/server.ts",
     "docker": "docker-compose up --build"
   },
   "repository": {
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/rodrigomafrarios/clean-node#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.6.2",
     "@types/node": "^14.14.10",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "node-pre-gyp": "^0.17.0",
     "validator": "^13.5.1"
