--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.6.2",
     "@types/node": "^14.14.10",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "eslint": "^7.14.0",
@@ -43,6 +44,7 @@
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
