--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.2",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
@@ -52,6 +53,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "node-pre-gyp": "^0.17.0",
     "validator": "^13.5.1"
