--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,19 +8,19 @@ services:
       - ./data:/data/db
     ports:
       - "27017:27017"
-    #networks:
-    #  - app_network
-  #api:
-  #  container_name: api-container
-  #  image: node:12
-  #  working_dir: /usr/src/api
-  #  restart: always
-  #  command: bash -c "npm run debug"
-  #  volumes:
-  #    - ./dist:/usr/src/api
-  #  ports:
-  #    - "5000:5000"
-  #  networks:
-  #    - app_network
-#networks:
-#  app_network:
+  api:
+   container_name: api-container
+   image: node:12
+   working_dir: /usr/src/api
+   restart: always
+   command: bash -c "npm install --only=prod && npm run debug"
+   environment:
+     - MONGO_URL=mongodb://mongo:27017/clean-node-api
+   volumes:
+     - ./dist:/usr/src/api
+     - ./package.json:/usr/src/api/package.json
+   ports:
+     - "5000:5000"
+     - "9222:9222"
+   links:
+     - mongo
