--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "build": "sucrase ./src -d ./dist --transforms typescript,imports && tsc -p tsconfig-build.json",
     "start": "sucrase-node src/main/server.ts",
     "debug": "node --inspect=0.0.0.0:9222 --nolazy main/server.js",
@@ -38,6 +39,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "coveralls": "^3.1.0",
     "eslint": "^7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.1",
