--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,14 @@
         "esModuleInterop": true,
         "allowJs": true,
         "strictNullChecks": false,
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules"
-    ]
+		"sourceMap": true,
+		"rootDir": "src",
+		"baseUrl": "src",
+		"paths": {
+			"@/*": ["*"]
+		}
+	},
+	"include": [
+		"src"
+	]
 }
