--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "build": "sucrase ./src -d ./dist --transforms typescript,imports && tsc -p tsconfig-build.json",
     "start": "sucrase-node src/main/server.ts",
-    "debug": "node --inspect=0.0.0.0:9222 --nolazy main/server.js",
+    "debug": "node --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "docker": "docker-compose up --build",
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down"
@@ -52,6 +52,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
     "mockdate": "^3.0.2",
+    "rimraf": "^3.0.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
@@ -67,6 +68,6 @@
     "validator": "^13.5.1"
   },
   "_moduleAliases": {
-	  "@": "dist"
+    "@": "dist"
   }
 }
