--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "coveralls": "^3.1.0",
@@ -65,6 +66,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.3",
     "node-pre-gyp": "^0.17.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.1"
   },
   "_moduleAliases": {
