--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "fast-glob": "^3.2.4",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
+    "mongo-round": "^1.0.0",
     "mongodb": "^3.6.3",
     "node-pre-gyp": "^0.17.0",
     "nodemon": "^2.0.7",
