--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src/**/*", "../tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src", "tests"],
+  "exclude": []
 }
