--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "apollo-server-express": "^2.21.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.4",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
