--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "build": "sucrase ./src -d ./dist --transforms typescript,imports && tsc -p tsconfig-build.json",
+    "build:watch": "sucrase ./src -d ./dist --transforms typescript,imports && tsc -p tsconfig-build.json -w",
     "start": "sucrase-node ./src/main/server.ts",
     "debug": "nodemon -L --watch ./src --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "docker": "sudo npm install && npm run build && docker-compose up --build",
@@ -33,6 +34,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
@@ -64,6 +66,7 @@
     "express": "^4.17.1",
     "fast-glob": "^3.2.4",
     "graphql": "^15.5.0",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
