--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,4 +1,17 @@
 {
-    "extends": "./tsconfig.json",
-    "exclude": ["**/*.spec.ts", "**/*.test.ts"]
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "commonjs",
+    "target": "es2019",
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "rootDirs": ["src", "tests"],
+    "baseUrl": "src",
+    "paths": {
+      "@/tests/*": ["../tests/*"],
+      "@/*": ["*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": []
 }
