test: ensure Login Query returns an account on valid credentials

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:integration-verbose": "jest --passWithNoTests --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
@@ -43,6 +44,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "apollo-server-integration-testing": "^2.3.1",
     "coveralls": "^3.1.0",
     "eslint": "^7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
